# PhalanxTray

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: icon.icns
include/: defines.h  platform.h  savedata.h
include/ContentMode/: ContentModeBase.h  ContentModeFFXIV.h  ContentModeTime.h
lib/Debug/: tray.lib
modules/: MacOSXBundleInfo.plist.in
source/: defines.h  main.cpp  savedata.cpp  savedata.h
source/ContentMode/: ContentModeBase.cpp  ContentModeFFXIV.cpp  ContentModeTime.cpp
source/Platform/: darwin.mm  linux.cpp  windows.cpp
